# ros-vosk-asr

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: asr.launch  en-us.launch  es.launch  small-en-us.launch  small-es.launch
nodes/: asr
src/vosk_asr/: __init__.py  asr.py
