<?xml version="1.0"?>
<package format="2">
  <name>vosk_asr</name>
  <version>0.1.0</version>
  <description>An ASR service running the Vosk/Kaldi engine</description>
  <maintainer email="blukawsk@ing.uc3m.es">Bartek Łukawski</maintainer>
  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-sounddevice-pip</exec_depend>
</package>
